fix a overflow bug

--- a/puzzle.css
+++ b/puzzle.css
@@ -4,25 +4,26 @@ body{font-family:cursive;}
 
 header{margin: 10px 0;}
 header h1{font-size: 40px;font-weight: 900;text-align: center;line-height: 50px;}
-header .game_info{font-size: 20px; text-align: center;margin: 10px 0;list-style-type: none;}
+header .game_info{font-size: 20px; text-align: center;list-style-type: none;}
 header .game_info li{display: inline-block; margin:0 30px;}
 #puzzle_wall{text-align: center;width: 60%;margin: 0 auto;}
 canvas{width:100%;max-width: 400px;}
-#start{font-size:22px;width:150px;line-height:30px;margin:10px auto;background: #449d44;color: #fff;border: none;}
-#cheat{}
+#start{font-size:22px;width:400px;line-height:30px;margin:10px auto;background: #449d44;color: #fff;border: none;}
+#cheat{font-size:18px;width:120px;line-height:20px;margin:10px auto;background: #ec971f;color: #fff;border: none;}
 
 #set_btn{display: none;}
 #setting{position: absolute;height: 100%;width:20%;min-width:200px;top:0;right:0;font-family:fantasy,serif;background: #2f2f2f;color:#ccc;text-align:left;box-shadow: inset 0 0 20px 5px rgba(0,0,0,.7);}
 #setting h3{text-align:center;}
-#setting ul li{list-style-type: none;padding:0 10px 10px 20px;}
+#setting ul li{list-style-type: none;padding:0 10px 10px 10px;}
+#setting ul li select, #setting ul li input{max-width: 100%;} 
 #setting ul h4{font-weight: 100;margin:5px 0;}
-.control_bar select, button{padding: 5px;margin: 10px 2px;}
-.control_bar label{display:inline-block;}
+.control_bar {text-align: center;} 
+.control_bar button{padding: 5px;margin: 10px 2px;}
 footer{text-align: center;width: 100%;opacity: 0.5;line-height:40px;margin: 0 auto;}
 
 @media screen and (max-width: 800px){
-	body{overflow: hidden;}
-	#puzzle_wall{position: relative;right: 0;top: 0;height: 100%;width: 90%;margin: 0 5%;}
+	body,#puzzle_wall, #setting{overflow: hidden;}
+	#puzzle_wall{position: relative;right: 0;top: 0;height: 100%;width: 90%;margin: 0 5%;overflow-y:scroll;}
 	header h1 {font-size: 30px;line-height: 30px;}
 	header .game_info li{font-size: 18px;margin:0 10px;}
 	.control_bar label{text-align:left;}
@@ -30,7 +31,7 @@ footer{text-align: center;width: 100%;opacity: 0.5;line-height:40px;margin: 0 au
 	#cheat{display:none;}
 	#set_btn{display:block;width: 35px;height: 35px;position: absolute;right: 0;top: 0;cursor: pointer;z-index:100;}
 	#set_btn img{width: 100%;}
-	#setting{right: -200px;width:200px;}
+	#setting{right: -200px;width:200px;overflow-y:scroll;}
 
 	#puzzle_wall, #setting, #set_btn{transition:all .3s ease; -webkit-transition:all .3s ease;)
 }
